Alterações no modelo VariaveisModelo, na view Criação do LaudoModelo e retirada o Laudo Dinamico para outra forma de implementação.

--- a/a_core/templates/detail.html
+++ b/a_core/templates/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes {{ object }}</title>
-    <a href="{% url 'a_core:produzir_laudo' object.pk %}">Produzir Laudo</a>
+    <!-- <a href="{% url 'a_core:produzir_laudo' object.pk %}">Produzir Laudo</a> -->
 </head>
 <body>
     <h1>Detalhes</h1>
