Mecânica de ordenação de topicos implementada.

--- a/a_core/templates/detail.html
+++ b/a_core/templates/detail.html
@@ -10,6 +10,7 @@
     <h1>Detalhes</h1>
     <h2>{{ object }}</h2>
     <a href="{% url 'a_core:produzir_laudo' object.pk %}">Produzir Laudo</a>
+    <a href="{% url 'a_core:ordenar_laudo' object.pk %}">Ordenar Laudo</a>
     <ul><strong>Variáveis Associadas</strong>
         {% if object.variaveismodelo_set.all %}
             <ul>
